depth option in navigation not considering camera and light type objects. #120778

Closed
opened 2024-04-18 11:53:09 +02:00 by Hamed-Nasrollahi-Majid · 1 comment

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 850M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: (4.0)

Short description of error
try to orbit view around a camera with depth option enable in preferences-navigation, you can see view is orbiting around middle point not camera which is under mouse cursor.

Exact steps for others to reproduce the error

  • Go to Blender Preferences -> Navigation and ensure that:
    • Orbit Around Selection is Disabled
    • Auto Depth is Enabled
    • Zoom to Mouse Position is Enabled
  • In the 3D View, with the mouse cursor over the Camera's Triangle, try to zoom or orbit around it
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 850M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: (4.0) **Short description of error** try to orbit view around a camera with depth option enable in preferences-navigation, you can see view is orbiting around middle point not camera which is under mouse cursor. <video src="/attachments/6c587f39-d227-4b8c-88f3-3c47ba860e90" controls></video> **Exact steps for others to reproduce the error** - Go to `Blender Preferences` -> `Navigation` and ensure that: - `Orbit Around Selection` is **Disabled** - `Auto Depth` is **Enabled** - `Zoom to Mouse Position` is **Enabled** - In the 3D View, with the mouse cursor over the Camera's Triangle, try to zoom or orbit around it
Hamed-Nasrollahi-Majid added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2024-04-18 11:53:10 +02:00

Caused by 5fea1eda36
Probably due the changes in ED_view3d_depth_override
@filedescriptor ^

Caused by 5fea1eda36 Probably due the changes in `ED_view3d_depth_override` @filedescriptor ^
Germano Cavalcante added
Priority
High
and removed
Priority
Normal
labels 2024-04-18 19:58:46 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-02 14:36:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120778
No description provided.