Fix #120778: Depth navigation no longer works for non-geometry objects

Regression in [0] that changed behavior of depth drawing to exclude
overlays which are needed so users can box-zoom to an armature or camera
for example. Add `V3D_DEPTH_NO_OVERLAY` when no overlays are desired.

[0]: 5fea1eda36179943deb06ab7d1c1896d80a28f4c